[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ui/settings/input_select.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/ui/settings/audio_settings.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/settings/slider_setting.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="AudioSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
master_slider_path = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Master")
effects_slider_path = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Effects")
radio_slider_path = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Radio")
music_slider_path = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Music")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 1920.0
margin_bottom = 255.0
size_flags_horizontal = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1895.0
margin_bottom = 230.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="Master" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
setting_key = "volume_master"

[node name="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Master" index="0"]
text = "MASTER"

[node name="Effects" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 55.0
margin_bottom = 95.0
setting_key = "volume_effects"

[node name="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Effects" index="0"]
text = "EFFECTS"

[node name="Radio" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 110.0
margin_bottom = 150.0
setting_key = "volume_radio"

[node name="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Radio" index="0"]
text = "RADIO"

[node name="Music" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 165.0
margin_bottom = 205.0
setting_key = "volume_music"

[node name="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Music" index="0"]
text = "MUSIC"

[node name="InputSelect" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
already_used_path = NodePath("VBoxContainer/AlreadyUsed")

[node name="BackgroundColor" type="ColorRect" parent="InputSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 21.0
margin_right = 1.0
margin_bottom = 21.0
color = Color( 0, 0, 0, 0.501961 )

[node name="VBoxContainer" type="VBoxContainer" parent="InputSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="PressAnyKey" type="Label" parent="InputSelect/VBoxContainer"]
margin_top = 494.0
margin_right = 1920.0
margin_bottom = 532.0
custom_fonts/font = ExtResource( 3 )
text = "Press any key"
align = 1
valign = 1

[node name="Cancel" type="Label" parent="InputSelect/VBoxContainer"]
margin_top = 536.0
margin_right = 1920.0
margin_bottom = 558.0
text = "Cancel with the Escape key"
align = 1
valign = 1

[node name="AlreadyUsed" type="Label" parent="InputSelect/VBoxContainer"]
margin_top = 562.0
margin_right = 1920.0
margin_bottom = 586.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "already used"
align = 1
valign = 1

[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/Master" to="." method="_on_master_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/Effects" to="." method="_on_effects_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/Radio" to="." method="_on_radio_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/Music" to="." method="_on_music_changed"]

[editable path="ScrollContainer/MarginContainer/VBoxContainer/Master"]
[editable path="ScrollContainer/MarginContainer/VBoxContainer/Effects"]
[editable path="ScrollContainer/MarginContainer/VBoxContainer/Radio"]
[editable path="ScrollContainer/MarginContainer/VBoxContainer/Music"]
